--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <span class="p_footer"><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
                         partenaire</a></span>
                 <a class="a__element" href="#">Mention légales</a>
-                <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
+                <a class="a__element" href="mailto:contact@ohmyfood.com">Contact</a>
             </div>
         </footer>
     </div>
