--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -20,122 +20,123 @@
     <main class="main_page">
         <span>
             <img class="illustration_page" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            alt="photo d'une assiette du restaurant à la française">
+                alt="photo d'une assiette du restaurant à la française">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
                 <h2 class="restaurant_name">La note enchantée</h2>
                 <i class="far fa-heart heart_page"></i>
-                <i class="fas fa-heart heartfull_page"></i> 
-            </div> 
-    <div class="orga_desktop__menu">
-        <section class="detail_menu--entrées">
-            <h3>ENTREÉS</h3>
-                <article class="menu_1">          
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Raviole de foie gras</h4>
-                        <p class="sous_menu">Accaompagnés de leur crème à la truffe</p>
-                    </div>
-                        <p class="price">25€</p>   
-                    <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-                </article>
-                <article class="menu_2">
-                    
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Caviar osciètre</h4>
-                        <p class="sous_menu">Sur blini à la truffe</p>
-                    </div>
+                <i class="fas fa-heart heartfull_page"></i>
+            </div>
+            <div class="orga_desktop__menu">
+                <section class="detail_menu--entrées">
+                    <h3>ENTREÉS</h3>
+                    <article class="menu_1">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Raviole de foie gras</h4>
+                            <p class="sous_menu">Accaompagnés de leur crème à la truffe</p>
+                        </div>
+                        <p class="price">25€</p>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                    <article class="menu_2">
+
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Caviar osciètre</h4>
+                            <p class="sous_menu">Sur blini à la truffe</p>
+                        </div>
                         <p class="price">35€</p>
-                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>   
-                </article>       
-                <article class="menu_3">
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Homard et espuma de potiron</h4>
-                        <p class="sous_menu">Mariné aux zeste d'orange</p>
-                    </div>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                    <article class="menu_3">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Homard et espuma de potiron</h4>
+                            <p class="sous_menu">Mariné aux zeste d'orange</p>
+                        </div>
                         <p class="price">20€</p>
-                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div> 
-                </article>
-                <article class="menu_4">
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Foie gras de canard cuit entier</h4>
-                        <p class="sous_menu">Confiture de figue et pain toasté</p>
-                    </div>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                    <article class="menu_4">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Foie gras de canard cuit entier</h4>
+                            <p class="sous_menu">Confiture de figue et pain toasté</p>
+                        </div>
                         <p class="price">40€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-                </article>
-        </section>
-        <section class="detail_menu--plats">
-            <h3>PLATS</h3>
-            <article class="menu_4">
-                <div class="description_menu">
-                    <h4 class="title_menu_h4">Noix de coquilles Saint-Jacques</h4>
-                    <p class="sous_menu">Sur lit de purée de céleri-rave</p>
-                </div>
-                    <p class="price">40€</p>
-                    <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-            </article>
-            <article class="menu_5">
-                <div class="description_menu">
-                    <h4 class="title_menu_h4">Langoustine poêlée</h4>
-                    <p class="sous_menu">Purée de patate douce</p>
-                </div>
-                    <p class="price">35€</p>
-                    <div class="check_menu"><i class="fas fa-check-circle check"></i></div>  
-            </article>       
-            <article class="menu_6">            
-                <div class="description_menu">
-                    <h4 class="title_menu_h4">Mijotée de queue de boeuf</h4>
-                    <p class="sous_menu">Et riz sauvage aux zestes de citron</p>
-                </div> 
-                    <p class="price">44€</p>
-                    <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-            </article> 
-        </section> 
-    </div>
-        <div class="orga_desktop_dessert-button">
-            <section class="detail_menu--desserts">
-                <h3>DESSERTS</h3>
-                <article class="menu_7"> 
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Macaron noisette et chocolat</h4>
-                        <p class="sous_menu">Glace au caramel brun et sel de Guérande</p>
-                    </div>
+                    </article>
+                </section>
+                <section class="detail_menu--plats">
+                    <h3>PLATS</h3>
+                    <article class="menu_4">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Noix de coquilles Saint-Jacques</h4>
+                            <p class="sous_menu">Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <p class="price">40€</p>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                    <article class="menu_5">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Langoustine poêlée</h4>
+                            <p class="sous_menu">Purée de patate douce</p>
+                        </div>
+                        <p class="price">35€</p>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                    <article class="menu_6">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Mijotée de queue de boeuf</h4>
+                            <p class="sous_menu">Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <p class="price">44€</p>
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                </section>
+            </div>
+            <div class="orga_desktop_dessert-button">
+                <section class="detail_menu--desserts">
+                    <h3>DESSERTS</h3>
+                    <article class="menu_7">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Macaron noisette et chocolat</h4>
+                            <p class="sous_menu">Glace au caramel brun et sel de Guérande</p>
+                        </div>
                         <p class="price">18€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-                </article>
-                <article class="menu_8">                 
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Baba au rhum revisité</h4>
-                        <p class="sous_menu">Avec son coulis de citron</p>
-                    </div>
+                    </article>
+                    <article class="menu_8">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Baba au rhum revisité</h4>
+                            <p class="sous_menu">Avec son coulis de citron</p>
+                        </div>
                         <p class="price">22€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-                </article>       
-                <article class="menu_9">       
-                    <div class="description_menu">
-                        <h4 class="title_menu_h4">Tarte au citron meringuée</h4>
-                        <p class="sous_menu">Déstructurée</p>
-                    </div> 
+                    </article>
+                    <article class="menu_9">
+                        <div class="description_menu">
+                            <h4 class="title_menu_h4">Tarte au citron meringuée</h4>
+                            <p class="sous_menu">Déstructurée</p>
+                        </div>
                         <p class="price">23€</p>
-                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>     
-                </article> 
-            </section>
-            <div class="button--commande">
-                <input class="commander" type="button" value="Commander">
+                        <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
+                    </article>
+                </section>
+                <div class="button--commande">
+                    <input class="commander" type="button" value="Commander">
+                </div>
             </div>
         </div>
-        </div>     
     </main>
     <footer>
         <h4 class="footer_h4">ohmyfood</h4>
         <div class="footer_list">
-            <span class="p_footer"><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
+            <span class="p_footer"><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un
+                    restaurant</a>
             </span>
             <span class="p_footer"><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
                     partenaire</a></span>
             <a class="a__element" href="#">Mention légales</a>
-            <a class="a__element" href="mailto:someone@yoursite.com">Contact</a>
+            <a class="a__element" href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
