ajout de commentaires

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </form>
         </div>
         <section class="text_accueil">
-            <h1 id="titre_resaccueil"> Réservez le menu qui vous convient</h1>
-            <p id="sstitre_resaccueil"> Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
+            <h2 id="titre_accueil"> Réservez le menu qui vous convient</h2>
+            <p id="sstitre_accueil"> Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
 
             <input class="to_other_pages" type="button" value="Explorez nos restaurants">
         </section>
