--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/31b712f9dc.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
-
 <body>
     <header class="header_page">
         <div class="page_accueil">
@@ -29,6 +28,9 @@
                 <i class="fas fa-heart heartfull_page"></i>
             </div>
             <div class="orga_desktop__menu">
+
+                        <!-- menu entrées -->
+
                 <section class="detail_menu--entrées">
                     <h3>ENTREÉS</h3>
                     <article class="menu_1">
@@ -40,7 +42,6 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                     <article class="menu_2">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Caviar osciètre</h4>
                             <p class="sous_menu">Sur blini à la truffe</p>
@@ -65,6 +66,9 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                 </section>
+
+                        <!-- menu plats -->
+
                 <section class="detail_menu--plats">
                     <h3>PLATS</h3>
                     <article class="menu_4">
@@ -94,6 +98,9 @@
                 </section>
             </div>
             <div class="orga_desktop_dessert-button">
+
+                        <!-- menu desserts -->
+
                 <section class="detail_menu--desserts">
                     <h3>DESSERTS</h3>
                     <article class="menu_7">
@@ -121,6 +128,9 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                 </section>
+
+                        <!-- boutton de commande  -->
+
                 <div class="button--commande">
                     <input class="commander" type="button" value="Commander">
                 </div>
