--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/31b712f9dc.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
-
 <body>
     <header class="header_page">
         <div class="page_accueil">
@@ -28,8 +27,10 @@
                 <i class="far fa-heart heart_page"></i>
                 <i class="fas fa-heart heartfull_page"></i>
             </div>
-
             <div class="orga_desktop__menu">
+
+                        <!-- menu entrées -->
+
                 <section class="detail_menu--entrées">
                     <h3>ENTREÉS</h3>
                     <article class="menu_1">
@@ -41,94 +42,87 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                     <article class="menu_2">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Bouchée de homard croustillant</h4>
                             <p class="sous_menu">Et sa farandole de petits légumes</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_3">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Velouté de cèpes</h4>
                             <p class="sous_menu">AUx truffes</p>
                         </div>
                         <p class="price">20€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- menu plats  -->
+
                 <section class="detail_menu--plats">
                     <h3>PLATS</h3>
                     <article class="menu_4">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Poulet rôtie aux herbes de Provence</h4>
                             <p class="sous_menu">Et sa crème de truffe</p>
                         </div>
                         <p class="price">40€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_5">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Langouste rôtie</h4>
                             <p class="sous_menu">Et ses légumes de saison</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_6">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Côte de boeuf Angus</h4>
                             <p class="sous_menu">Et sa purée de panais</p>
                         </div>
                         <p class="price">44€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
             </div>
             <div class="orga_desktop_dessert-button">
+
+                        <!-- menu desserts -->
+
                 <section class="detail_menu--desserts">
                     <h3>DESSERTS</h3>
                     <article class="menu_7">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Farandole de desserts</h4>
                             <p class="sous_menu">Du chef</p>
                         </div>
                         <p class="price">18€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_8">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Crème brulée</h4>
                             <p class="sous_menu">Revisité</p>
                         </div>
                         <p class="price">22€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_9">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Tiramisu</h4>
                             <p class="sous_menu">À la noisette</p>
                         </div>
                         <p class="price">23€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- boutton de commande -->
+
                 <div class="button--commande">
                     <input class="commander" type="button" value="Commander">
                 </div>
