--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/31b712f9dc.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
-
 <body>
     <header class="header_page">
         <div class="page_accueil">
@@ -28,8 +27,10 @@
                 <i class="far fa-heart heart_page"></i>
                 <i class="fas fa-heart heartfull_page"></i>
             </div>
-
             <div class="orga_desktop__menu">
+
+                        <!-- menus entrées  -->
+
                 <section class="detail_menu--entrées">
                     <h3>ENTREÉS</h3>
                     <article class="menu_1">
@@ -41,61 +42,57 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                     <article class="menu_2">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Velouté de légumes d'antan</h4>
                             <p class="sous_menu">Carotte, panais, topinambour</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_3">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Soupe à l'oignon</h4>
                             <p class="sous_menu">Revisitée</p>
                         </div>
                         <p class="price">20€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- menus plats  -->
+
                 <section class="detail_menu--plats">
                     <h3>PLATS</h3>
                     <article class="menu_4">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Coquilles Saint-Jacques</h4>
                             <p class="sous_menu">Accompagné d'une purée de panais</p>
                         </div>
                         <p class="price">40€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_5">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Magret de canard</h4>
                             <p class="sous_menu">Et parmentier de pommes de terre</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_6">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Pigeonneau d'Ile-et-Vilaine</h4>
                             <p class="sous_menu">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <p class="price">44€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
             </div>
             <div class="orga_desktop_dessert-button">
+
+                        <!-- menu desserts -->
+
                 <section class="detail_menu--desserts">
                     <h3>DESSERTS</h3>
                     <article class="menu_7">
@@ -106,29 +103,27 @@
                         </div>
                         <p class="price">18€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_8">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Fondant au chocolat</h4>
                             <p class="sous_menu">Revisité</p>
                         </div>
                         <p class="price">22€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_9">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Millefeuille croustillant</h4>
                             <p class="sous_menu">Myrtilles de pâte d'amande</p>
                         </div>
                         <p class="price">23€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- boutton de commande -->
+
                 <div class="button--commande">
                     <input class="commander" type="button" value="Commander">
                 </div>
