--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -9,7 +9,6 @@
     <script src="https://kit.fontawesome.com/31b712f9dc.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
-
 <body>
     <header class="header_page">
         <div class="page_accueil">
@@ -30,8 +29,10 @@
                     <i class="fas fa-heart heartfull_page"></i>
                 </div>
             </div>
-
             <div class="orga_desktop__menu">
+
+                        <!-- menu entrées -->
+
                 <section class="detail_menu--entrées">
                     <h3>ENTREÉS</h3>
                     <article class="menu_1">
@@ -43,61 +44,57 @@
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
                     </article>
                     <article class="menu_2">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Foie gras de canard mi-cuit</h4>
                             <p class="sous_menu">Et ses copeaux de truffe noire</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_3">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Oeuf au plat</h4>
                             <p class="sous_menu">Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <p class="price">20€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- menu plats  -->
+
                 <section class="detail_menu--plats">
                     <h3>PLATS</h3>
                     <article class="menu_4">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Filet de boeuf aux herbes</h4>
                             <p class="sous_menu">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <p class="price">40€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_5">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Parmantier de queue de boeuf</h4>
                             <p class="sous_menu">À la truffe noire sur sa purée de panais</p>
                         </div>
                         <p class="price">35€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_6">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Filet de turbot</h4>
                             <p class="sous_menu">Aux agrumes</p>
                         </div>
                         <p class="price">44€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
             </div>
             <div class="orga_desktop_dessert-button">
+
+                        <!-- menu desserts -->
+
                 <section class="detail_menu--desserts">
                     <h3>DESSERTS</h3>
                     <article class="menu_7">
@@ -108,29 +105,27 @@
                         </div>
                         <p class="price">18€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_8">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Macaron au chocolat d'exception</h4>
                             <p class="sous_menu">Et glace à la vanille de Madagascar</p>
                         </div>
                         <p class="price">22€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                     <article class="menu_9">
-
                         <div class="description_menu">
                             <h4 class="title_menu_h4">Mousse au chocolat</h4>
                             <p class="sous_menu">Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <p class="price">23€</p>
                         <div class="check_menu"><i class="fas fa-check-circle check"></i></div>
-
                     </article>
                 </section>
+
+                        <!-- boutton de commande  -->
+
                 <div class="button--commande">
                     <input class="commander" type="button" value="Commander">
                 </div>
