--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
         <nav class="nav_restaurant_accueil">
 
             <ol>
-                <li class="choix"><i class="fas fa-mobile alt"></i> Choisissez un restaurant</li>
-                <li class="composez"><i class="fas fa-list-ul alt"></i> Composez votre menu</li>
-                <li class="deguster"><i class="fas fa-store violet"></i> Déguster au restaurant</li>
+                <li class="choix"><i class="fas fa-mobile-alt"></i>
+                    <p class="txt_filtres">Choisissez un restaurant</p>
+                </li>
+                <li class="composez"><i class="fas fa-list-ul alt"></i>
+                    <p class="txt_filtres">Composez votre menu</p>
+                </li>
+                <li class="deguster"><i class="fas fa-store violet"></i>
+                    <p class="txt_filtres">Déguster au restaurant</p>
+                </li>
             </ol>
         </nav>
 
