--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.min.css">
     <script src="https://kit.fontawesome.com/31b712f9dc.js" crossorigin="anonymous"></script>
+    <script src="js/apply.js"></script>
     <title>Oh My Food</title>
 </head>
 
@@ -125,5 +126,6 @@
     </div>
 
 </body>
+
 
 </html>
